--- a/genindex.html
+++ b/genindex.html
@@ -898,10 +898,10 @@
 </li>
       <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory">ServerFactory (class in copyxnat.xnat_backend.server_factory)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SESSION_ID_MAP">SESSION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand">ShowCommand (class in copyxnat.commands.show_command)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.start_progress">start_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
@@ -913,6 +913,8 @@
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SUBJECT_ID_MAP">SUBJECT_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.subjects">subjects() (copyxnat.xnat_backend.pyxnat_server.PyXnatProject method)</a>
+</li>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.SUPPLEMENTAL_DATATYPE_INFO">SUPPLEMENTAL_DATATYPE_INFO (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 </li>
   </ul></td>
 </tr></table>
