deploy: 31882cc7fa5d744f2c38061a2c32f8b570fb88d7

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -42,6 +42,7 @@
 <li><a href="copyxnat/commands/export_command.html">copyxnat.commands.export_command</a></li>
 <li><a href="copyxnat/commands/find_commands.html">copyxnat.commands.find_commands</a></li>
 <li><a href="copyxnat/commands/ohif_command.html">copyxnat.commands.ohif_command</a></li>
+<li><a href="copyxnat/commands/rebuild_catalog_command.html">copyxnat.commands.rebuild_catalog_command</a></li>
 <li><a href="copyxnat/commands/show_command.html">copyxnat.commands.show_command</a></li>
 <li><a href="copyxnat/pyreporter/pyreporter.html">copyxnat.pyreporter.pyreporter</a></li>
 <li><a href="copyxnat/ui/copyxnat_command_line.html">copyxnat.ui.copyxnat_command_line</a></li>
