--- a/_modules/copyxnat/commands/find_commands.html
+++ b/_modules/copyxnat/commands/find_commands.html
@@ -46,6 +46,7 @@
 <span class="kn">from</span> <span class="nn">copyxnat.commands.export_command</span> <span class="kn">import</span> <span class="n">ExportCommand</span>
 <span class="kn">from</span> <span class="nn">copyxnat.commands.show_command</span> <span class="kn">import</span> <span class="n">ShowCommand</span>
 <span class="kn">from</span> <span class="nn">copyxnat.commands.ohif_command</span> <span class="kn">import</span> <span class="n">OhifCommand</span>
+<span class="kn">from</span> <span class="nn">copyxnat.commands.rebuild_catalog_command</span> <span class="kn">import</span> <span class="n">RebuildCatalogCommand</span>
 
 
 <div class="viewcode-block" id="find_command"><a class="viewcode-back" href="../../../copyxnat.commands.find_commands.html#copyxnat.commands.find_commands.find_command">[docs]</a><span class="k">def</span> <span class="nf">find_command</span><span class="p">(</span><span class="n">command_string</span><span class="p">):</span>
@@ -62,7 +63,8 @@
             <span class="n">ShowCommand</span><span class="p">,</span>
             <span class="n">CopyCommand</span><span class="p">,</span>
             <span class="n">CheckDatatypesCommand</span><span class="p">,</span>
-            <span class="n">OhifCommand</span>
+            <span class="n">OhifCommand</span><span class="p">,</span>
+            <span class="n">RebuildCatalogCommand</span>
             <span class="p">]</span></div>
 </pre></div>
 
