--- a/copyxnat.commands.ohif_command.html
+++ b/copyxnat.commands.ohif_command.html
@@ -16,7 +16,7 @@
     
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="copyxnat.commands.show_command module" href="copyxnat.commands.show_command.html" />
+    <link rel="next" title="copyxnat.commands.rebuild_catalog_command module" href="copyxnat.commands.rebuild_catalog_command.html" />
     <link rel="prev" title="copyxnat.commands.find_commands module" href="copyxnat.commands.find_commands.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
@@ -29,7 +29,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.commands.show_command.html" title="copyxnat.commands.show_command module"
+          <a href="copyxnat.commands.rebuild_catalog_command.html" title="copyxnat.commands.rebuild_catalog_command module"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="copyxnat.commands.find_commands.html" title="copyxnat.commands.find_commands module"
@@ -109,8 +109,8 @@
   <p class="topless"><a href="copyxnat.commands.find_commands.html"
                         title="previous chapter">copyxnat.commands.find_commands module</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="copyxnat.commands.show_command.html"
-                        title="next chapter">copyxnat.commands.show_command module</a></p>
+  <p class="topless"><a href="copyxnat.commands.rebuild_catalog_command.html"
+                        title="next chapter">copyxnat.commands.rebuild_catalog_command module</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -142,7 +142,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.commands.show_command.html" title="copyxnat.commands.show_command module"
+          <a href="copyxnat.commands.rebuild_catalog_command.html" title="copyxnat.commands.rebuild_catalog_command module"
              >next</a> |</li>
         <li class="right" >
           <a href="copyxnat.commands.find_commands.html" title="copyxnat.commands.find_commands module"
