--- a/genindex.html
+++ b/genindex.html
@@ -96,6 +96,8 @@
 </li>
         <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.CACHE_TYPE">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
 </li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.CACHE_TYPE">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.CACHE_TYPE">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
@@ -121,6 +123,8 @@
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.COMMAND_LINE">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.COMMAND_LINE">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.COMMAND_LINE">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.COMMAND_LINE">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
@@ -189,6 +193,13 @@
 </li>
       </ul></li>
       <li>
+    copyxnat.commands.rebuild_catalog_command
+
+      <ul>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#module-copyxnat.commands.rebuild_catalog_command">module</a>
+</li>
+      </ul></li>
+      <li>
     copyxnat.commands.show_command
 
       <ul>
@@ -202,6 +213,8 @@
         <li><a href="copyxnat.pyreporter.html#module-copyxnat.pyreporter">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.pyreporter.pyreporter
 
@@ -209,8 +222,6 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -510,6 +521,8 @@
 </li>
         <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.HELP">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
 </li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.HELP">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.HELP">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
@@ -597,6 +610,8 @@
 </li>
         <li><a href="copyxnat.commands.ohif_command.html#module-copyxnat.commands.ohif_command">copyxnat.commands.ohif_command</a>
 </li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#module-copyxnat.commands.rebuild_catalog_command">copyxnat.commands.rebuild_catalog_command</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#module-copyxnat.commands.show_command">copyxnat.commands.show_command</a>
 </li>
         <li><a href="copyxnat.pyreporter.html#module-copyxnat.pyreporter">copyxnat.pyreporter</a>
@@ -648,6 +663,8 @@
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.NAME">(copyxnat.commands.export_command.ExportCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.NAME">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.NAME">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.NAME">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
@@ -784,6 +801,8 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.rebuild_catalog">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand">RebuildCatalogCommand (class in copyxnat.commands.rebuild_catalog_command)</a>
+</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.reconstruction">reconstruction (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.RECONSTRUCTION_ID_MAP">RECONSTRUCTION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
@@ -862,6 +881,8 @@
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.run">(copyxnat.commands.export_command.ExportCommand method)</a>
 </li>
         <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.run">(copyxnat.commands.ohif_command.OhifCommand method)</a>
+</li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.run">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand method)</a>
 </li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.run">(copyxnat.commands.show_command.ShowCommand method)</a>
 </li>
@@ -943,6 +964,8 @@
 </li>
         <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.USE_DST_SERVER">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
 </li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.USE_DST_SERVER">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.USE_DST_SERVER">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
@@ -965,6 +988,8 @@
 </li>
         <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.VERB">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
 </li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.VERB">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.VERB">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
@@ -972,10 +997,10 @@
 </li>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_pip">version_from_pip() (in module copyxnat.utils.versioning)</a>
 </li>
-      <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_versioneer">version_from_versioneer() (in module copyxnat.utils.versioning)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_versioneer">version_from_versioneer() (in module copyxnat.utils.versioning)</a>
+</li>
       <li>
     versioneer
 
